jvm crash at javafx com.sun.webkit.WebPage.twkPrePaint (GFlag + Heap verification)

XMLWordPrintable

    • web
    • master
    • x86
    • windows_7

        jvm crash at javafx com.sun.webkit.WebPage.twkPrePaint at http://www.usatoday.com site

        Steps to reproduce :
        Pre-condition : enable Heap verification for JAVA_HOME\bin\java.exe
        ref : https://msdn.microsoft.com/en-us/library/windows/hardware/ff549561(v=vs.85).aspx

        1. Use hello.HelloWebView (from toys) and load http://www.usatoday.com
        2. wait for site to render (~60 seconds)
        3. Application will crash

          1. hs_err_pid14168.log
            39 kB
            Maksim Khramov
          2. hs_err_pid7240.log
            37 kB
            Maksim Khramov

              Assignee:
              Guru Hb (Inactive)
              Reporter:
              Maksim Khramov (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: