8160563: jvm crash at javafx com.sun.webkit.WebPage.twkPrePaint (GFlag + Heap verification)

Reviewed-by: azvegint, arajkumar